--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ a:focus
 .recipe-image
 {
   width: 60%;
-  height: 60%;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
